# detettore

./: .gitignore  README.md  detettore.py  environment.yml  filter.py  pyproject.toml  setup.py  strumenti_laboratorio.py  variantcaller.py
conda/: meta.yaml
example/: TE_annotation.gff  TE_conensusLib.fasta  TEconsensus.fasta  reads.bam.bai
example/tips/Sap31/: taps.tsv  tips.tsv
example/tips/Sap40/: taps.tsv  tips.tsv
example/tips/Sap44/: taps.tsv  tips.tsv
example/tips/Sap47/: taps.tsv  tips.tsv
example/tips/Sap49/: taps.tsv  tips.tsv
example/tips/Sap57/: taps.tsv  tips.tsv
example/tips/Sap58/: taps.tsv  tips.tsv
example/tips/Sap59/: taps.tsv  tips.tsv
example/tips/Sap61/: taps.tsv  tips.tsv
example/tips/Sap64/: taps.tsv  tips.tsv
example/tips/Sap66/: taps.tsv  tips.tsv
example/tips/Sap68/: taps.tsv  tips.tsv
scripts/: bamstats.py  combineVCFs.py  nonreference_insertions.py  reference_insertions.py  strumenti.py
