[tool.poetry]
name = "detettore"
version = "2.0"
description = "A tool to detect transposable element polymorphisms"
authors = ["cstritt <crstp.strt@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
minimap2 = { git = "https://github.com/lh3/minimap2.git" }
pysam
numpy
biopython
joblib
numba

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
