[tool.poetry]
name = "detettore"
version = "2.0"
description = "A tool to detect transposable element polymorphisms"
authors = ["cstritt <crstp.strt@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/cstritt/detettore"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
mappy = {git = "https://github.com/lh3/minimap2.git"}
biopython = "^1.79"
numpy = "^1.21.0"
pysam = "^0.16.0"
numba = "^0.53.1"
scipy = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
